    + [HE] Add check for build-deps on build-essential. Yes, people do that.
    + [RA] Recognize direct invocations of quilt in clean rules and allow
      Build-Depends on quilt in that case.  Reported by Sam Hocevar.
      (Closes: #374878)
    + [RA] Fix handling of versioned Build-Depends to avoid spurious
      build-depends-without-arch-dep warnings.  Reported by Marcus
      Better.
  * checks/po-debconf:
    + [RA] Don't consider templates.in to be a stray translated template
      file.  Thanks, Thomas Huriaux.  (Closes: #367534)

 -- Russ Allbery <rra@debian.org>  Wed, 21 Jun 2006 13:29:37 -0700

lintian (1.23.21) unstable; urgency=low

  * checks/menus:
    + [RA] Tell Perl where common_data.pm is since we're now including it.
      Doh.  Thanks, Nelson A. de Oliveira.  (Closes: #366481)

 -- Russ Allbery <rra@debian.org>  Mon,  8 May 2006 18:52:45 -0700

lintian (1.23.20) unstable; urgency=low

  The "Policy backlog clearing is a wonderful sight" release

  * checks/debconf{.desc,}:
    + [RA] Add checks for the Developer's Reference guidelines for debconf
      templates.  Based on a patch by Thomas Huriaux.  (Closes: #362145)
  * checks/fields{.desc,}:
    + [RA] xfonts-encodings is also not an xfont package.  Thanks, Drew
      Parsons.  (Closes: #365503)
    + [RA] Report errors for dependencies on python-minimal.  Thanks to
      Steve Langasek for the analysis.
    + [RA] Allow a build-dependency on patchutils when using CDBS with one
      of the patch systems, as patchutils may be optionally used to check
      for bad patches.  Thanks, Marc Dequènes (Duck).  (Closes: #365466)
    + [RA] Since some packages should be in Build-Depends and some should
      be in Build-Depends-Indep, report all of the misplaced ones rather
      than just the first one.  That way, users know which to move.
    + [RA] Allow perl in Build-Depends if invoked in clean rules.
    + [RA] Allow patch in Build-Depends if yada unpatch is invoked in
      clean rules.